---
title: ResBack - Feedback Processing Classes
---
classDiagram
    direction TB

    class FeedbackController {
        <<controller>>
        #SentimentService sentimentService
        #FeedbackSubmissionGuard submissionGuard
        #FeedbackAutoRejectService autoRejectService
        +create() View
        +store(StoreFeedbackRequest request) View
        +history(Request request) View
        +destroy(Request request, Feedback feedback) RedirectResponse
        +thankyou() View
    }

    class StoreFeedbackRequest {
        <<form request>>
        +authorize() bool
        +rules() array
        +messages() array
    }

    class FeedbackSubmissionGuard {
        <<service>>
        +isDuplicate(User user, int categoryId, string content) bool
        +tooManyAttempts(User user) bool
        +availableIn(User user) int
        +recordSubmission(User user) void
    }

    class FeedbackAutoRejectService {
        <<service>>
        +shouldReject(string content) bool
    }

    class SentimentService {
        <<service>>
        -LanguageCategoryService languageCategoryService
        -ConcernTopicService concernTopicService
        -ConcernRankingService concernRankingService
        +analyze(Feedback feedback) void
    }

    class LanguageCategoryService {
        <<service>>
        +normalize(array languages) array
    }

    class ConcernTopicService {
        <<service>>
        +normalize(array topics, array keywords, string content) array
    }

    class ConcernRankingService {
        <<service>>
        +rank(int? categoryId, string? languageCategory, FeedbackDateRange? dateRange) Collection
        +rebuildCategory(int categoryId) void
        +rebuildAll() void
    }

    FeedbackController ..> StoreFeedbackRequest : validates input through
    FeedbackController --> FeedbackSubmissionGuard : checks submissions
    FeedbackController --> FeedbackAutoRejectService : checks content
    FeedbackController --> SentimentService : analyzes accepted feedback
    SentimentService --> LanguageCategoryService : normalizes languages
    SentimentService --> ConcernTopicService : normalizes topics
    SentimentService --> ConcernRankingService : rebuilds category rankings

%% Source: app/Http/Controllers/FeedbackController.php, app/Http/Requests and
%% app/Services, inspected 2026-09-24. Selected feedback-processing class view.
%% Solid arrows are stored constructor-injected references; dashed arrows are
%% dependencies. + public, # protected, - private. Constructors/private helpers
%% and framework ancestors omitted. Optional parameter defaults omitted.
%% FeedbackController extends Controller; StoreFeedbackRequest extends FormRequest.
%% SentimentService calls the external Gemini API via Laravel Http (no local
%% GeminiClient class), persists SentimentResult and updates Feedback status.
%% Rejected feedback bypasses SentimentService and has no analysis result.
%% rank() returns computed collection rows; rebuildCategory() persists rankings.
%% Models and multiplicities are shown in resback-class-diagram.mmd.
